--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "prettier --check . && next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "bulma": "1.0.4",
+    "dayjs": "1.11.13",
+    "lodash": "4.17.21",
+    "mongodb": "6.17.0",
+    "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/lodash": "4.17.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "prettier": "3.5.3",
+    "sass": "1.89.1",
+    "typescript": "^5"
   }
 }
