--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "4.17.21",
     "mongodb": "6.17.0",
     "next": "15.3.3",
+    "openai": "5.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
