--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "prettier --check . && next lint",
+    "lint": "prettier --check . && eslint .",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -14,21 +14,24 @@
     "dayjs": "1.11.13",
     "lodash": "4.17.21",
     "mongodb": "6.17.0",
-    "next": "15.3.3",
+    "next": "16.0.7",
     "openai": "5.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.2.1",
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/lodash": "4.17.17",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "16.0.7",
     "prettier": "3.5.3",
     "sass": "1.89.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
